<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.openmrs.module</groupId>
	<artifactId>amrsreports</artifactId>
	<version>0.3-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>AMRS Reports Module</name>
	<description>Provides easy acess to AMPATH reports, limits access and adds logic rules and cohort definitions for MOH reports.</description>

	<url>http://wiki.ampath.or.ke/display/data/Comprehensive+Care+Clinic+Pre+ART+Register+MOH+361A</url>
	
	<developers>
		<developer>
			<name>Jeremy Keiper</name>
		</developer>
		<developer>
			<name>Antony O'jwang</name>
		</developer>
		<developer>
			<name>Alfayo Kwatuha</name>
		</developer>
		<developer>
			<name>Nicholas Ingosi</name>
		</developer>
		<developer>
			<name>Oliver Mwalo</name>
		</developer>
	</developers>
	
	<organization>
		<name>AMPATH</name>
		<url>http://www.ampath.or.ke</url>
	</organization>

	<scm>
		<connection>scm:git:https://github.com/AMPATH/openmrs-module-amrsreports</connection>
		<developerConnection>scm:git:https://github.com/AMPATH/openmrs-module-amrsreports</developerConnection>
		<url>https://github.com/AMPATH/openmrs-module-amrsreports</url>
	  <tag>HEAD</tag>
  </scm>

	<modules>
		<module>api</module>
		<module>omod</module>
	</modules>

	<properties>
        <calculationVersion>1.0</calculationVersion>
        <reportingVersion>0.7.5</reportingVersion>
        <serializationVersion>0.2.7</serializationVersion>
        <htmlWidgetsVersion>1.6.0</htmlWidgetsVersion>
        <logicVersion>0.5.1</logicVersion>
        <openCSVVersion>2.3</openCSVVersion>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <MODULE_ID>${project.parent.artifactId}</MODULE_ID>
        <MODULE_NAME>${project.parent.name}</MODULE_NAME>
        <MODULE_VERSION>${project.parent.version}</MODULE_VERSION>
        <MODULE_PACKAGE>${project.parent.groupId}.${project.parent.artifactId}</MODULE_PACKAGE>
        <openMRSVersion>1.8.0</openMRSVersion>
        <customArgLineForTesting />
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<dependencyManagement>
		<dependencies>
			<!-- External dependencies -->

			<dependency>
				<groupId>org.openmrs.module</groupId>
				<artifactId>reporting-api</artifactId>
				<version>${reportingVersion}</version>
				<scope>provided</scope>
			</dependency>

			<dependency>
				<groupId>org.openmrs.module</groupId>
				<artifactId>logic-api</artifactId>
				<version>${logicVersion}</version>
				<type>jar</type>
				<scope>provided</scope>
			</dependency>

			<dependency>
				<groupId>org.openmrs.module</groupId>
				<artifactId>serialization.xstream-api</artifactId>
				<version>${serializationVersion}</version>
				<scope>provided</scope>
			</dependency>

			<dependency>
				<groupId>org.openmrs.module</groupId>
				<artifactId>htmlwidgets</artifactId>
				<version>${htmlWidgetsVersion}</version>
				<scope>provided</scope>
			</dependency>

            <dependency>
                <groupId>org.openmrs.module</groupId>
                <artifactId>calculation-api</artifactId>
                <version>${calculationVersion}</version>
                <type>jar</type>
                <scope>provided</scope>
            </dependency>

            <dependency>
                <groupId>net.sf.opencsv</groupId>
                <artifactId>opencsv</artifactId>
                <version>${openCSVVersion}</version>
            </dependency>

            <!-- End External dependencies -->

			<!-- Begin OpenMRS core -->
			
			<dependency>
				<groupId>org.openmrs.api</groupId>
				<artifactId>openmrs-api</artifactId>
				<version>${openMRSVersion}</version>
				<type>jar</type>
				<scope>provided</scope>
			</dependency>

			<dependency>
				<groupId>org.openmrs.web</groupId>
				<artifactId>openmrs-web</artifactId>
				<version>${openMRSVersion}</version>
				<type>jar</type>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.openmrs.api</groupId>
				<artifactId>openmrs-api</artifactId>
				<version>${openMRSVersion}</version>
				<type>test-jar</type>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.openmrs.web</groupId>
				<artifactId>openmrs-web</artifactId>
				<version>${openMRSVersion}</version>
				<type>test-jar</type>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.openmrs.test</groupId>
				<artifactId>openmrs-test</artifactId>
				<version>${openMRSVersion}</version>
				<type>pom</type>
				<scope>test</scope>
			</dependency>

			<!-- End OpenMRS core -->

		</dependencies>
	</dependencyManagement>


	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<configuration>
						<target>1.6</target>
						<source>1.6</source>
					</configuration>
				</plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-release-plugin</artifactId>
                    <version>2.3.2</version>
                    <configuration>
                        <autoVersionSubmodules>true</autoVersionSubmodules>
                        <tagNameFormat>@{project.version}</tagNameFormat>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.openmrs.maven.plugins</groupId>
                    <artifactId>maven-openmrs-plugin</artifactId>
                    <version>1.0.1</version>
                    <extensions>true</extensions>
                    <executions>
                        <execution>
                            <id>init</id>
                            <phase>initialize</phase>
                            <goals>
                                <goal>initialize-module</goal>
                            </goals>
                        </execution>
                        <execution>
                            <id>pack</id>
                            <phase>package</phase>
                            <goals>
                                <goal>package-module</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>

                <plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-dependency-plugin</artifactId>
					<version>2.4</version>
				</plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.5</version>
                    <configuration>
                        <argLine>-Duser.language=en -Duser.region=US -Xmx512m -XX:MaxPermSize=512m ${customArgLineForTesting}</argLine>
                    </configuration>
                </plugin>

            </plugins>
		</pluginManagement>
	</build>

	<repositories>
		<repository>
			<id>openmrs-repo</id>
			<name>OpenMRS Nexus Repository</name>
			<url>http://mavenrepo.openmrs.org/nexus/content/repositories/public</url>
		</repository>
	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<id>openmrs-repo</id>
			<name>OpenMRS Nexus Repository</name>
			<url>http://mavenrepo.openmrs.org/nexus/content/repositories/public</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>

</project>
